<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/color"
        android:title="@string/color">
        <menu>
            <item android:id="@+id/lilac"
                android:title="@string/lilac"/>
            <item android:id="@+id/pink"
                android:title="@string/pink"/>
            <item android:id="@+id/beige"
                android:title="@string/beige"/>
            <item android:id="@+id/frog"
                android:title="@string/frog"/>
        </menu>
    </item>
    <item android:id="@+id/font"
        android:title="@string/font">
        <menu>
            <item android:id="@+id/al"
                android:title="@string/al"/>
            <item android:id="@+id/ab"
                android:title="@string/ab"/>
            <item android:id="@+id/e"
                android:title="@string/e"/>
            <item android:id="@+id/ts"
                android:title="@string/ts"/>
        </menu>
    </item>

    <item android:id="@+id/language"
        android:title="@string/language">
        <menu>
            <item android:id="@+id/ru"
                android:title="@string/ru"/>
            <item android:id="@+id/en"
                android:title="@string/en"/>
        </menu>
    </item>

    <item android:id="@+id/orientation"
        android:title="@string/orientation">
        <menu>
            <item android:id="@+id/vertical"
                android:title="@string/vertical"/>
            <item android:id="@+id/horizontal"
                android:title="@string/horizontal"/>
        </menu>
    </item>
    <item android:id="@+id/exit"
        android:title="@string/exit"/>
</menu>
